Pull request #155: AG-12974 fix action buttons padding
Merge in EXTENSIONS/browser-assistant from fix/AG-12974 to master

Squashed commit of the following:

commit e5760f6033512e3661fba824ff4b28645daf18a9
Merge: a5bb94c efd1018
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Mar 1 18:39:55 2022 +0300

    Merge branch 'master' into fix/AG-12974

commit a5bb94cfb32f553c55e5ab5b7bb33886afb4d85b
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Mar 1 16:34:17 2022 +0300

    AG-12974 ff fix

commit c9be13464bad5aae0b3afb093604903f8118bb2c
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Feb 28 16:12:35 2022 +0300

    AG-12974 fix action buttons padding

--- a/src/popup/components/Options/Option/option.pcss
+++ b/src/popup/components/Options/Option/option.pcss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-items: flex-start;
     max-width: 32rem;
-    padding: 2.1rem 0 0.5rem;
+    padding: 1.1rem 0 1.1rem;
     border-top: 0.05rem solid var(--grayd8);
 
     .action {
