--- a/src/popup/popup.pcss
+++ b/src/popup/popup.pcss
@@ -1,6 +1,6 @@
 body {
     width: 32rem;
     max-width: 32rem;
-    min-height: 44rem;
+    min-height: 43.2rem;
     overflow: hidden;
 }
