--- a/src/shared/styles/common.pcss
+++ b/src/shared/styles/common.pcss
@@ -21,7 +21,7 @@ html {
 /* https://github.com/AdguardTeam/BrowserAssistant/issues/48 */
 @-moz-document url-prefix() {
     html {
-        min-height: 500px;
+        min-height: 432px;
         width: 320px;
         margin: auto;
     }
